--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@
 /config/master.key
 # Ignore .env file containing credentials.
 .env*
-
+/config/credentials/google_credentials.json
 # Ignore Mac and Linux file system files
 *.swp
 .DS_Store
